crates/jsonschema-codegen/tests/ui/invalid_one_of_empty.stderr
error: [] has less than 1 item
 --> tests/ui/invalid_one_of_empty.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"oneOf":[]}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
