crates/jsonschema-codegen/tests/ui/invalid_one_of_empty.rs
#[jsonschema::validator(schema = r#"{"oneOf":[]}"#)]
struct InvalidOneOfEmptyValidator;

fn main() {}
